# htmltmpl

./: CHANGELOG.md  LICENSE  html-tmpl.cabal  htmltmpl.cabal
app/: Main.hs
src/: Htmltmpl.hs
tests/001/: input.html
tests/002/: input.html
tests/003/: input.html
tests/004/: input.html
