cabal-version:      3.4
name:               htmltmpl
version:            0.1.0.0
-- synopsis:
-- description:
license:            BSD-3-Clause
license-file:       LICENSE
author:             Andrew Martin
maintainer:         andrew.thaddeus@gmail.com
-- copyright:
category:           Web
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  Htmltmpl
    build-depends:
      , base >=4.20
      , text >=2.0
      , primitive >=0.9
      , xmlhtml >=0.2.5.4
      , containers >=0.7
      , split >=0.2.5
    hs-source-dirs:   src
    default-language: GHC2024

executable htmltmpl
    import:           warnings
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends:
        , base >=4.20
        , htmltmpl
        , text >=2.0
        , bytestring >=0.11
        , xmlhtml >=0.2.5.4
        , primitive >=0.9

    hs-source-dirs:   app
    default-language: GHC2024
